# ludic

./: README.md  add_modal.txt  modal_setup.md  pyproject.toml
docs/: modal_deployment_guide.md  modal_development_notes.md  modal_setup.md
examples/: eval_key_door.py  simple_train.py  test_full_workflow.py  test_weights.py
examples/train/: train_tic_tac_toe.py
scripts/: __init__.py  ludic_config.py  modal_inference_v2.py  modal_training.py
src/ludic_envs/: modal_client.py  parsers.py
src/ludic_envs/envs/: env.py  tic_tac_toe.py
src/ludic_envs/envs/mdp/: tic_tac_toe.py
src/ludic_envs/envs/pomdp/: key_door.py
src/ludic_envs/inference/: __init__.py  modal_inference_app.py  rollout_generator.py  sample.py  vllm_client.py  vllm_server.py
src/ludic_envs/trainers/: __init__.py  modal_training_app.py
src/ludic_envs/trainers/trl/: grpo.py
tests/: test_rollout_generator.py  test_sample_with_gpu.py  test_tic_tac_toe.py  test_vllm_client.py
