[project]
name = "ludic-envs"
version = "0.1.0"
description = "an llm-rl environments framework for the era of experience"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.5",
    "torch>=2.7.0",
    "vllm>=0.8.5.post1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
]

hf = [
    "huggingface",
    "datasets",
    "trl"
]


[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
